--- a/PRACTICA1/assets/css/style-footer.css
+++ b/PRACTICA1/assets/css/style-footer.css
@@ -20,3 +20,10 @@ footer section h4 {
     padding: 0;
     margin: 0;
 }
+
+@media (max-width: 650px) {
+    footer {
+        display: block;
+        text-align: center;
+    }
+}
