--- a/PRACTICA1/assets/css/style-header.css
+++ b/PRACTICA1/assets/css/style-header.css
@@ -97,6 +97,17 @@ header .nav-bar .section-navigation {
     header .header-users .login-form button {
         margin: 5px 0;
     }
+
+    header .nav-bar {
+        display: grid;
+    }
+
+    header .nav-bar .section-navigation {
+        border-top: 1px solid white;
+        border-left: none;
+        margin-top: 15px;
+        padding-top: 10px;
+    }
 }
 
 @media (max-width: 460px) {
@@ -108,10 +119,15 @@ header .nav-bar .section-navigation {
     header .header-users .login-form button {
         margin: 5px 4rem;
     }
+
+    header .nav-bar a {
+        margin: 0 1rem;
+    }
 }
 
 @media (max-width: 365px) {
-    header .nav-bar {
+    header .nav-bar .section-navigation,
+    header .nav-bar .section-expo-types {
         display: grid;
     }
 
