--- a/PRACTICA1/assets/css/style-body.css
+++ b/PRACTICA1/assets/css/style-body.css
@@ -133,10 +133,26 @@ body {
     padding: 3rem 0;
     margin: auto;
     color: #222222;
+    display: grid;
+    align-items: center;
+}
+
+.page-expo .expo-img {
+    grid-row: 1;
+}
+
+.page-expo .expo-img h1 {
+    margin-top: 0;
 }
 
 .page-expo .expo-info {
-    text-align: center;
+    grid-row: 1;
+    margin-left: 2rem;
+    grid-column: span 2;
+}
+
+.page-expo .obras {
+    grid-column: span 3;
 }
 
 .page-obra .obra-description,
@@ -225,6 +241,15 @@ body {
 }
 
 @media (max-width: 960px) {
+    .page-expo {
+        display: block;
+        text-align: center;
+    }
+
+    .page-expo .expo-info{
+        margin: 0;
+    }
+
     .page-expo .obras fieldset {
         display: grid;
         grid-template-columns: 50% 50%;
@@ -256,7 +281,7 @@ body {
 }
 
 @media (max-width: 460px) {
-    .page-expo .expo-info img {
+    .page-expo .expo-img img {
         width: 90%;
         height: 90%;
     }
