Trabajando en la página de documentación.

--- a/PRACTICA1/assets/css/style-main.css
+++ b/PRACTICA1/assets/css/style-main.css
@@ -459,6 +459,10 @@ body {
     .page-signup .signup-form-section form button {
         width: 90%;
     }
+
+    .page-doc {
+        width: 95%;
+    }
 }
 
 @media (max-width: 460px) {
